<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tutorial_sdk"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/HTSdkColorBgLoader"
    tools:context="br.com.handtalk.androidlib.TutorialSDK"
    android:scrollbars = "vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/closeButton"
            android:contentDescription="@string/label_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_clear_white"/>

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_full_handtalk_subtract"/>

        <TextView
            android:text="@string/tuto_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:text="@string/tuto_head_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:src="@drawable/tuto01"
            android:contentDescription="@string/tuto_head_01"
            android:layout_width="wrap_content"
            android:layout_height="315dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/tuto_head_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"/>

        <ImageView
            android:src="@drawable/tuto02"
            android:contentDescription="@string/tuto_head_02"
            android:layout_width="wrap_content"
            android:layout_height="315dp"
            android:paddingBottom="10dp"/>

    </LinearLayout>

</ScrollView>